Basic shopping list querying and updated dev ip

--- a/angular.json
+++ b/angular.json
@@ -55,6 +55,17 @@
                   "with": "src/environments/environment.development.ts"
                 }
               ]
+            },
+            "local": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.local.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -67,6 +78,9 @@
             },
             "development": {
               "buildTarget": "project:build:development"
+            },
+            "local": {
+              "buildTarget": "project:build:local"
             }
           },
           "defaultConfiguration": "development"
