--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host=0.0.0.0 --disable-host-check",
+    "start-local": "ng serve --host=0.0.0.0 --disable-host-check --configuration local",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
